--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,181 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
 }
+header {
+  height: 110px;
+  display: flex;
+  align-items: center;
+  padding-block: 10px;
+}
+
+header .site-logo {
+  color: red;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 15px;
+}
+
+header a {
+  text-decoration: none;
+  color: red;
+  font-weight: 600;
+  padding: 5px 20px;
+}
+
+footer {
+  background-color: black;
+  color: red;
+  height: 75px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+button {
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  font-size: 1em;
+  color: white;
+  background-color: #007BFF;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+
+
+.series-container {
+  text-align: center;
+}
+
+.series-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.series-card {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 300px;
+  transition: transform 0.3s;
+}
+
+.series-card:hover {
+  transform: translateY(-10px);
+}
+
+.series-image {
+  width: 100%;
+  height: auto;
+}
+
+.card-content {
+  padding: 15px;
+}
+
+.series-title {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.series-seasons {
+  font-size: 19.2px;
+  color: #555;
+}
+
+.show-more-button {
+  background: #007BFF;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 20px 0;
+  border-radius: 5px;
+}
+
+.show-more-button:hover {
+  background: #0056b3;
+}
+
+.series-detail-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+}
+
+.season-card-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.season-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+}
+
+.season-card:hover {
+  transform: scale(1.05);
+}
+
+.season-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.season-title {
+  font-size: 24px;
+  margin: 16px;
+  text-align: center;
+}
+
+.episode-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  margin: 16px 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.episode-card h3 {
+  margin-top: 0;
+}
+
+.episode-card p {
+  margin: 8px 0;
+}
+
+.episode-card audio {
+  width: 100%;
+  margin-top: 8px;
+}
+
