--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background-color: white;
+  background-color: White;
   font-family: "Inter", sans-serif;
   -ms-overflow-style: none;
   scrollbar-width: none;
