--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
 }
+
 header {
   height: 110px;
   display: flex;
@@ -37,13 +38,15 @@ header .site-logo {
   width: 100px;
   height: 100px;
 }
-header nav{
+
+header nav {
   flex: 1;
   display: flex;
   justify-content: center;
   width: 100px;
   height: 100px;
 }
+
 header a {
   text-decoration: none;
   color: #49243E;
@@ -70,8 +73,6 @@ img {
 }
 
 button {
-  
-  /* display: block; */
   margin: 20px 20px;
   padding: 10px 20px;
   font-size: 1em;
@@ -83,7 +84,9 @@ button {
   transition: background-color 0.3s;
 }
 
-
+button:hover {
+  background-color: #8B5D5D;
+}
 
 .series-container {
   text-align: center;
@@ -206,6 +209,107 @@ button {
 .episode-card audio {
   width: 100%;
   margin-top: 8px;
+}
+
+.favorite-icon {
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.favorites-container {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.favorites-show {
+  width: 100%;
+}
+
+.favorites-item {
+  background: #A78295;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 300px;
+  transition: transform 0.3s;
+  margin: 20px;
+  padding: 10px;
+}
+
+.favorites-item:hover {
+  transform: translateY(-10px);
+}
+
+.favorites-image {
+  width: 100%;
+  height: auto;
+}
+
+.favorites-content {
+  padding: 15px;
+}
+
+.favorites-content h3 {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.favorites-content p {
+  font-size: 19.2px;
+  color: #555;
+}
+/* Favorites.css */
+.favorite-icon {
+  cursor: pointer;
+  color: red; /* color when favorited */
+}
+
+.season-card-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.season-card {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  width: 300px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s;
+  text-align: center;
+}
+
+.season-card:hover {
+  transform: scale(1.05);
+}
+
+.season-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.placeholder-image {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ddd;
+  color: #aaa;
+  font-size: 20px;
+}
+
+.season-title {
+  font-size: 24px;
+  margin: 16px;
+  text-align: center;
 }
 
 
